fix(style): remove z-index on focus mixin

--- a/packages/ods/src/components/phone-number/src/components/ods-phone-number/ods-phone-number.scss
+++ b/packages/ods/src/components/phone-number/src/components/ods-phone-number/ods-phone-number.scss
@@ -31,6 +31,11 @@
   }
 
   &__input {
+    &:focus {
+      position: relative;
+      z-index: 1;
+    }
+
     &--sibling {
       margin-left: -1px; // to merge input and select borders
 
